WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182375
We no longer need to queue service worker jobs until the connection to the service worker process has been established
https://bugs.webkit.org/show_bug.cgi?id=182375
Summary
We no longer need to queue service worker jobs until the connection to the se...
Chris Dumez
Reported
2018-01-31 21:16:20 PST
We no longer need to queue service worker jobs until the connection to the service worker process has been established. We initially did this to work around the fact that registrations restored from disk would not have an active worker until the service worker process had been established. However, this issue has been fixed in
r227696
.
Attachments
Patch
(4.17 KB, patch)
2018-01-31 21:19 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-01-31 21:19:19 PST
Created
attachment 332847
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2018-01-31 21:30:11 PST
<
rdar://problem/37102439
>
Chris Dumez
Comment 3
2018-02-01 09:10:23 PST
Comment on
attachment 332847
[details]
Patch Clearing flags on attachment: 332847 Committed
r227967
: <
https://trac.webkit.org/changeset/227967
>
Chris Dumez
Comment 4
2018-02-01 09:10:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug